Fixed a bug where the dropdown list was behind some page content

--- a/app/components/module/module.css
+++ b/app/components/module/module.css
@@ -73,7 +73,7 @@ body {
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
+    z-index: 1000000000000;
     -webkit-padding-start: 0;
     /* Overriding preset */
 }
